# low-level-programming

./: README.md
assembly learning programs/hello/: hello.asm
assembly learning programs/hello_proper_exit/: hello.asm  help.txt
assembly learning programs/jumps_example/: jumps_example  jumps_example.asm  jumps_example.txt
assembly learning programs/lea_vs_mov/: lea_vs_mov.asm
assembly learning programs/print_call/: print_call.asm  print_call.txt
assembly learning programs/print_rax/: help.txt  print_rax.asm
assembly learning programs/strlen/: help.txt  strlen.asm
assignment-image-rotation-c/: .gitignore
assignment-image-rotation-c/solution/: CMakeLists.txt
assignment-image-rotation-c/solution/include/: bmp.h  file.h  image.h  pixel.h  rotation.h
assignment-image-rotation-c/solution/src/: bmp.c  file.c  image.c  main.c  pixel.c  rotation.c
assignment-io-library-assembly/: lib.inc  parse_int  parse_uint  print_uint  string_copy  string_copy_too_long.asm  string_equals  string_equals not equals  string_length  test.py
assignment-io-library-assembly/test_files/: print_char  print_int  print_string  read_char  read_word  read_word_length  read_word_too_long  string_copy_too_long  string_length
c course/1.2.basic calculation rules/: 1task.c  2task.c  3task.c  5task.c  6task.c
c course/1.3.conditional jumps/: 1task.c  2task.c  3task.c  4task.c
c course/1.5.global and local variables/: 1task.c
c course/1.6.cycles/: 1task.c  2task.c  3task.c  (+1 more)
notes/: .gitignore  lec-1-en.org  lec-1-ru.org  lec-2-en.org  lec-2-ru.org  lec-3-en.org  lec-9-en.org
(+72 files in other folders)
